Resolve issue regarding the chat-app link

--- a/index.html.html
+++ b/index.html.html
@@ -148,7 +148,7 @@
           </div>
           <div class="mini">
             <h4>Currently</h4>
-            <p>Designing the EditorPage & real‑time features for <em>CodeBridge</em>.</p>
+            <p>Working as a intern in <em>LM Software Solutions</em>.</p>
           </div>
           <div class="mini">
             <h4>Toolbox</h4>
@@ -231,7 +231,7 @@
           <p>Real‑time chat with rooms and typing indicators; lightweight UI and event‑driven backend.</p>
           <div class="stack"><span>Socket.io</span><span>Express</span><span>JS</span></div>
           <div class="links">
-            <a class="btn" href="https://github.com/rohitshinde08/chat-application" target="_blank" rel="noreferrer">GitHub</a>
+            <a class="btn" href="https://github.com/rohitshinde08/Chat-App" target="_blank" rel="noreferrer">GitHub</a>
           </div>
         </article>
       </div>
